Fix compiler-flags-hidden warning.

--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,9 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
 
+export DH_VERBOSE=1
+export DEB_CFLAGS_MAINT_APPEND=-fPIE
+export DEB_LDFLAGS_MAINT_APPEND=-fPIE -pie -Wl,-z,now
+
 %:
-	dh  $@
+	dh $@ --with autotools-dev
